--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
-    <title>Vite App</title>
+    <title>afizzycola</title>
   </head>
   <body>
     <canvas id="bg"></canvas>
-    
   </body>
 </html>
