added og metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
     <title>afizzycola</title>
+    <meta name="description" content="Personal site of afizzycola">
+    <meta property="og:title" content="afizzycola" />
+    <meta property="og:url" content="https://www.afizzycola.com/" />
+    <meta property="og:description" content="Personal site of afizzycola">
+    <meta property="og:image" content="https://tib-og-image-generator.vercel.app/afizzycola.png/?theme=dark">
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <canvas id="bg"></canvas>
