added google analytics tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <meta property="og:description" content="Personal site of afizzycola">
     <meta property="og:image" content="https://tib-og-image-generator.vercel.app/afizzycola.png/?theme=dark">
     <meta property="og:type" content="website" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BXC0QZH1P9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BXC0QZH1P9');
+    </script>
   </head>
   <body>
     <canvas id="bg"></canvas>
