adding lightning address

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
     <title>afizzycola</title>
+    <meta name="lightning" content="lnurlp:afizzycola@getalby.co"/>
     <meta name="description" content="Personal site of afizzycola">
     <meta property="og:title" content="afizzycola" />
     <meta property="og:url" content="https://www.afizzycola.com/" />
