swapped google analytics for plausible

--- a/index.html
+++ b/index.html
@@ -13,15 +13,8 @@
     <meta property="og:description" content="Personal site of afizzycola">
     <meta property="og:image" content="https://tib-og-image-generator.vercel.app/afizzycola.png/?theme=dark">
     <meta property="og:type" content="website" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BXC0QZH1P9"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-BXC0QZH1P9');
-    </script>
+    <!-- Site Analytics -->
+    <script defer data-domain="afizzycola.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
     <canvas id="bg"></canvas>
